--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,26 +1,36 @@
+---
+
+root: true
+
+plugins:
+  - functional
+
+extends:
+  - airbnb
+  - "plugin:functional/external-recommended"
+  - "plugin:functional/recommended"
+
+parser: babel-eslint
+
 env:
   browser: true
-  es2021: true
-extends:
-  - 'eslint:recommended'
-  - 'plugin:react/recommended'
-parserOptions:
-  ecmaFeatures:
-    jsx: true
-  ecmaVersion: 12
-  sourceType: module
-plugins:
-  - react
+  node: true
+  jest: true
+
+settings:
+  import/resolver:
+    - node
+    - webpack
+
 rules:
-  indent:
-    - error
-    - 4
-  linebreak-style:
-    - error
-    - windows
-  quotes:
-    - error
-    - single
-  semi:
-    - error
-    - always
+  import/extensions: 0
+  react/prop-types: 0
+  no-console: 0
+  no-param-reassign: 0
+  no-use-before-define: 0
+  functional/no-conditional-statement: 0
+  functional/no-expression-statement: 0
+  functional/immutable-data: 0
+  functional/functional-parameters: 0
+  functional/no-try-statement: 0
+  functional/no-throw-statement: 0
