--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "i18next": "^20.4.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.4",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5"
