--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/runtime": "^7.15.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^6.2.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
